// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleChoiceQuestion.choices array fetches a question's choices and paginate the results 1`] = `
Object {
  "q1": Object {
    "choices": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOA==",
            "title": "Je suis le titre pour tester la recherche sur le mot: bonsoir #38",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOQ==",
            "title": "Je suis le titre pour tester la recherche sur le mot: bonjoir #39",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MA==",
            "title": "Je suis le titre pour tester la recherche sur le mot: rododindron #40",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MQ==",
            "title": "Je suis le titre pour tester la recherche sur le mot: reDodindron #41",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0Mg==",
            "title": "Je suis le titre pour tester la recherche sur le mot: aulomidé #42",
          },
        },
      ],
    },
  },
  "q1Bis": Object {
    "choices": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOA==",
            "title": "Je suis le titre pour tester la recherche sur le mot: bonsoir #38",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOQ==",
            "title": "Je suis le titre pour tester la recherche sur le mot: bonjoir #39",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MA==",
            "title": "Je suis le titre pour tester la recherche sur le mot: rododindron #40",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MQ==",
            "title": "Je suis le titre pour tester la recherche sur le mot: reDodindron #41",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0Mg==",
            "title": "Je suis le titre pour tester la recherche sur le mot: aulomidé #42",
          },
        },
      ],
    },
  },
}
`;

exports[`MultipleChoiceQuestion.choices array fetches a question's choices and the number of answers to each of them 1`] = `
Object {
  "node": Object {
    "choices": Object {
      "edges": Array [
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 1,
            },
            "title": "Athlétisme",
          },
        },
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 1,
            },
            "title": "Natation",
          },
        },
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 2,
            },
            "title": "Sports collectifs",
          },
        },
        Object {
          "node": Object {
            "responses": Object {
              "totalCount": 0,
            },
            "title": "Sports individuels",
          },
        },
      ],
    },
  },
}
`;

exports[`MultipleChoiceQuestion.choices array fetches a question's choices that match the given term and paginate the results 1`] = `
Object {
  "q1": Object {
    "choices": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0NA==",
            "title": "Je suis le titre pour tester la recherche sur le mot: skuu #44",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0NQ==",
            "title": "Je suis le titre pour tester la recherche sur le mot: skurt #45",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOA==",
            "title": "Je suis le titre pour tester la recherche sur le mot: bonsoir #38",
          },
        },
      ],
    },
  },
  "q1Bis": Object {
    "choices": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2UzOQ==",
            "title": "Je suis le titre pour tester la recherche sur le mot: bonjoir #39",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MA==",
            "title": "Je suis le titre pour tester la recherche sur le mot: rododindron #40",
          },
        },
        Object {
          "node": Object {
            "id": "UXVlc3Rpb25DaG9pY2U6cXVlc3Rpb25jaG9pY2U0MQ==",
            "title": "Je suis le titre pour tester la recherche sur le mot: reDodindron #41",
          },
        },
      ],
    },
  },
}
`;
